# adk-samples

python/agents/RAG/: Makefile  README.md
python/agents/RAG/rag/: agent.py
python/agents/RAG/rag/shared_libraries/: grant_permissions.sh  prepare_corpus_and_data.py
python/agents/brand-aligned-presentations/: .env.example  README.md
python/agents/brand-aligned-presentations/presentation_agent/: prompt.py
python/agents/brand-aligned-presentations/presentation_agent/shared_libraries/: config.py
python/agents/brand-aligned-presentations/presentation_agent/sub_agents/google_research/: prompt.py
python/agents/brand-aligned-presentations/presentation_agent/tools/: visual_generator.py
python/agents/brand-aligned-presentations/tests/: test_config.py
python/agents/genmedia-for-commerce/: Makefile  README.md  pyproject.toml
python/agents/invoice-processing/: pyproject.toml
python/agents/pwn-agent/: Makefile  pyproject.toml
