[project]
name = "invoice-processing"
version = "1.0.0"
description = "Invoice Processing -- Unified inference and learning agent for invoice processing"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ['agent-catalog', 'adk', 'agent']
readme = "README.md"

authors = [
    { name = "Pouya Ghiasnezhad Omran", email = "pgomran@google.com" },
    { name = "Tanya Dixit", email = "dixittanya@google.com" },
]

dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "vertexai>=1.38.0",
    "pydantic>=2.8.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/GoogleCloudPlatform/adk-samples"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "agent-starter-pack>=0.14.1",
]

[tool.agent_packs]
template = "adk"

[tool.agent-starter-pack]
example_question = "Process the invoice for case_001."

[tool.agent-starter-pack.settings]
agent_directory = "invoice_processing"

[tool.ruff]
# extends the ruff rules established in the root .toml
extend = "../../../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
